force-app/main/default/objects/righteous__LightningActionGroup__c/righteous__LightningActionGroup__c.object-meta.xml
<CustomObject>
    <label>Lightning Action Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lightning Action Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>