force-app/main/default/objects/righteous__LightningActionGroup__c/fields/righteous__Active__c.field-meta.xml
<CustomField>
    <fullName>righteous__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>