force-app/main/default/objects/righteous__LightningActionGroup__c/fields/righteous__Advanced_Condition__c.field-meta.xml
<CustomField>
    <fullName>righteous__Advanced_Condition__c</fullName>
    <description>Provide custom Condition Expression String for evaluation. Supported Boolean functions are AND, OR , XOR, NOT

example: (#1 OR #2) AND (#3 OR #4)

Use #ConditionIndex pattern.</description>
    <inlineHelpText>Provide custom Condition Expression String for evaluation. Supported Boolean functions are AND, OR , XOR, NOT

example: (#1 OR #2) AND (#3 OR #4)

Use #ConditionIndex pattern.</inlineHelpText>
    <label>Advanced Condition</label>
    <type>TextArea</type>
</CustomField>