force-app/main/default/objects/righteous__LightningActionGroup__c/fields/righteous__Conditions_Met__c.field-meta.xml
<CustomField>
    <fullName>righteous__Conditions_Met__c</fullName>
    <description>In case Lightning Action Group is created with Lightning Action Group Conditions. 

All  - All Conditions must be TRUE. 
Any  - Any Conditions is TRUE. 
Custom - Custom Boolean Expression, like (#1 AND #3) OR (#2 AND #4)

Supported Boolean Functions: AND, OR, NOT, XOR</description>
    <inlineHelpText>Criteria of Lightning Action Group Condition Evaluation

All  - All Conditions must be TRUE. 
Any  - Any Conditions is TRUE. 
Custom - Expression built in form of #ConditionIndex, like (#1 AND #3) OR (#2 AND #4)</inlineHelpText>
    <label>Conditions Met</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Any</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>