force-app/main/default/objects/righteous__LightningActionGroup__c/fields/righteous__LightningActionConfigurationId__c.field-meta.xml
<CustomField>
    <fullName>righteous__LightningActionConfigurationId__c</fullName>
    <description>Associate Group with Master Lightning Action Configuration</description>
    <inlineHelpText>You must associate current record with any existing Lightning Action Configuration.</inlineHelpText>
    <label>Lightning Action Configuration</label>
    <referenceTo>righteous__LightningActionConfiguration__c</referenceTo>
    <relationshipLabel>Lightning Action Groups</relationshipLabel>
    <relationshipName>LightningActionGroups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>