force-app/main/default/objects/righteous__LightningActionGroup__c/listViews/righteous__All.listView-meta.xml
<ListView>
    <fullName>righteous__All</fullName>
    <columns>NAME</columns>
    <columns>righteous__Description__c</columns>
    <columns>righteous__LightningActionConfigurationId__c</columns>
    <columns>righteous__Active__c</columns>
    <columns>righteous__Conditions_Met__c</columns>
    <columns>righteous__Advanced_Condition__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>